select de municipio de comparacion al cambiar su valor cree una url que lo contenga como parametro y actualizo el sitio con la nueva url

--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -124,4 +124,23 @@
         });
     </script>
     <script src="{% static 'js/pma.js' %}"></script>
+    <script>
+        $(function () {
+            let municipio2 = $('#municipio2');
+
+            municipio2.on('change', function () {
+                let parameters = window.location.search;
+                let current_url = window.location.pathname;
+                const urlParams = new URLSearchParams(parameters);
+                //valido si existe municipio2 en la url para agregar o actualizar su valor
+                if (urlParams.has('municipio2')){
+                    urlParams.set('municipio2',$(this).val())
+                }else{
+                    urlParams.append('municipio2',$(this).val())
+                }
+
+                window.location.href = `${current_url}?${urlParams.toString()}`;
+            })
+        })
+    </script>
 {% endblock %}
