--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -78,12 +78,12 @@
                                                    0
                                                    </strong>
                                                 </span>
-                                                <i class="icon position-relative pull-right fa {% if forloop.first %}fa-angle-up{% else %}fa-angle-down{% endif %}"
+                                                <i class="icon position-relative pull-right fa fa-angle-down"
                                                    style="right: -240px"></i>
                                             </h4>
                                         </div>
                                         <div id="collapse{{ forloop.counter0 }}"
-                                             class="panel-collapse collapse {% if forloop.first %} in {% endif %}"
+                                             class="panel-collapse collapse"
                                              role="tabpanel"
                                              aria-labelledby="heading{{ forloop.counter0 }}">
                                             <div class="panel-body">
