--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -36,10 +36,6 @@
                             {{ form.periodo }}
                         </div>
 
-                        <div class="col-lg-3 col-md-3 col-sm-3" style="margin-top: 1.7em">
-                            <input type="submit" value="Submit" class="btn btn-primary">
-                        </div>
-
                         {% if messages %}
                             <div class="col-lg-12 col-md-12 col-sm-12 mt-1" id="message">
                                 <div class="alert alert-info">
@@ -130,6 +126,11 @@
                                     </div>
                                 {% endfor %}
                             </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-3 col-sm-12 pull-right mb-5px">
+                            <input type="submit" value="Registrar Municipio" class="btn btn-primary"
+                                   style="width: 100%">
                         </div>
                     </div>
                 </form>
