agregando indicador transferencias a select de indicadores

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -108,6 +108,9 @@
                             <option value="{% url 'ejecucion_presupuesto' %}">
                                 Ejecuci&oacute;n del presupuesto
                             </option>
+                            <option value="{% url 'transferencias' %}">
+                                Transferencias
+                            </option>
                         </select>
                     </form>
                     <form class="navbar-form navbar-left pma-navbar" role="search">
