--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -2,20 +2,20 @@
 {% load static humanize core_extras %}
 
 {% block main_content %}
-    <div class="container wide">
+    <div class="container-fluid wide">
         <div class="row">
             {% if request.GET.municipio %}
 
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <form class="navbar-form navbar-left">
                         <p>
-                            Escoger el municipio: <select class="form-control" name="municipio2" id="municipio2">
+                            Elija el municipio: <select class="form-control" name="municipio2" id="municipio2">
                             <option value="">(Municipio)</option>
                             {% for municipio in municipios %}
                                 <option value="{{ municipio.slug }}">{{ municipio.nombre }}</option>
                             {% endfor %}
                         </select>
-                            con el que desea comparar.
+                            con el cual desea compararse.
                         </p>
                     </form>
                 </div>
