--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -43,6 +43,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div id="bar_chart"></div>
+                </div>
                 {% if request.GET.municipio2 %}
                     <h3>{{ municipio2 }}</h3>
                     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -67,6 +70,7 @@
                             </tbody>
                         </table>
                     </div>
+                    <div id="chart2"></div>
                 {% endif %}
             {% else %}
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -148,5 +152,13 @@
         })
     </script>
     <script src="{% static 'js/highcharts.js' %}"></script>
-    {{ charts|load_charts:'bar_chart' }}
+    {% if charts %}
+        {% if charts|length == 1 %}
+            {{ charts|load_charts:'bar_chart' }}
+        {% else %}
+            {{ charts|load_charts:'bar_chart,chart2' }}
+        {% endif %}
+
+    {% endif %}
+
 {% endblock %}
