--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -21,8 +21,8 @@
                 </div>
 
                 <h3>{{ municipio }}</h3>
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <table class="table table-bordered">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <table class="table table-responsive table-bordered">
                         <thead>
                         <tr class="bg-primary">
                             <th>Asignación Anual</th>
@@ -43,13 +43,13 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <div id="bar_chart"></div>
                 </div>
                 {% if request.GET.municipio2 %}
                     <h3>{{ municipio2 }}</h3>
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <table class="table table-bordered">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <table class="table table-responsive table-bordered">
                             <thead>
                             <tr class="bg-primary">
                                 <th>Asignación Anual</th>
@@ -70,11 +70,13 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="chart2"></div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div id="chart2"></div>
+                    </div>
                 {% endif %}
             {% else %}
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <table class="table table-bordered">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <table class="table table-responsive table-bordered">
                         <thead>
                         <tr class="bg-primary">
                             <th>Clase</th>
@@ -114,7 +116,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-6 col-sm-6">
                     <div id="bar_chart" class="view-alternative"> grafico de barras
                     </div>
                 </div>
