--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -223,3 +223,6 @@
 .table-sm th, .table-sm td {padding: 0.3rem;}
 .table-responsive {display: block;overflow-x: auto;width: 100%;-webkit-overflow-scrolling: touch;}
 .table-responsive > .table-bordered { border: 0; }
+.vertical-middle {vertical-align: middle !important;}
+.fixed, .fixed2 {background-color: #48A1B1;border: 1px solid #fff !important; color: #fff;left: 0;position: sticky;}
+.fixed2 {left: 55px;}
