--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -49,9 +49,21 @@
                         <tbody>
                         {% for clasificacion in clasificaciones %}
                             <tr>
-                                <td>{{ clasificacion }}</td>
-                                {% for value in data_tasa|keyvalue:clasificacion %}
-                                    <td> {{ value }} </td>
+                                <td>Corriente</td>
+                                {% for value in data_tasa|keyvalue:clasificacion|keyvalue:'corriente' %}
+                                    <td> {{ value|floatformat:2 }} </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <td>Capital</td>
+                                {% for value in data_tasa|keyvalue:clasificacion|keyvalue:'capital' %}
+                                    <td> {{ value|floatformat:2 }} </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                {% for value in data_tasa|keyvalue:clasificacion|keyvalue:'total' %}
+                                    <td> {{ value|floatformat:2 }} </td>
                                 {% endfor %}
                             </tr>
                         {% endfor %}
