--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -85,8 +85,8 @@
                             <tbody>
                         {% for clasificacion in clasificaciones %}
                             <tr>
-                                <td>{{ clasificacion }}</td>
-                                {% for value in data_tasa|keyvalue:clasificacion %}
+                                <td>Total</td>
+                                {% for value in data_tasa|keyvalue:clasificacion|keyvalue:'total' %}
                                     <td> {{ value }} </td>
                                 {% endfor %}
                             </tr>
